# ascend_atlas_200i_model_convert

./: .gitignore  Net.py  README_ONNX.md  convert_to_onnx.py  data_processing.py  data_processing_3.py  export_onnx.py  main.py  pyproject.toml  run_acl_infer.py
lightning_logs/version_0/: events.out.tfevents.1750682393.CHINAMI-910LT91.12976.0  hparams.yaml  test_results
lightning_logs/version_0/checkpoints/: epoch=68-step=68.ckpt
scripts/: README_LOGITS_COMPARISON.md  acl_inference.py  compare_logits.py  compare_results.py  convert_to_onnx_improved.py  onnx_inference.py  pytorch_inference.py  run_all_inference_and_compare.py
