[project]
name = "atlas_200i"
version = "0.1.0"
description = "PyTorch Lightning project for multi-modal fusion"
dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "tensorboard>=2.0.0",
    "onnx>=1.12.0",
    "onnxruntime>=1.12.0",
    "pandas>=2.3.1",
    "openpyxl>=3.1.5",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
